discussion/kv_engine/186428/186428_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

legacy seqno work, lots squashed

Change-Id: I4d701acd627211c8efcef597df414b0e509f7d46

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-08 16:19:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-08 16:19:37.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/336919/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-08 16:56:41.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1057/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1053:28: warning: escaped string literal can be written as a raw string literal [modernize-raw-string-literal]
               fmt::format("{{\"max_seqno\":\"{}\"}}",
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~
                           R"({{"max_seqno":"{}"}})"
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:18: error: member access into incomplete type "KVStoreIface" [clang-diagnostic-error]
    auto gv = kvs.get(DiskDocKey{key, false}, vb);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.h:31:7: note: forward declaration of "KVStoreIface"
class KVStoreIface;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1088:29: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    auto legacy = nlohmann::json::parse(value.begin(), value.end());
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1057/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:18:
error: member access into incomplete type "KVStoreIface" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1057/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1272/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc(1077): error C2027: use of undefined type "KVStoreIface" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1272/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1026/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:18:
error: member access into incomplete type "KVStoreIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1026/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1050/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1050/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1082/ : FAILURE

Compile error at [2023-02-08T16:38:53.654Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:18:
error: member access into incomplete type "KVStoreIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1082/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1388/ : FAILURE

Failure of GoogleTest "CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only
[2023-02-08T16:32:03.094Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:4567: Failure
[2023-02-08T16:32:03.094Z] Expected equality of these values:
[2023-02-08T16:32:03.094Z]   mvs
[2023-02-08T16:32:03.094Z]     Which is: 3
[2023-02-08T16:32:03.094Z]   handle.getDefaultCollectionMaxVisibleSeqno()
[2023-02-08T16:32:03.094Z]     Which is: 2
[2023-02-08T16:32:03.094Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:4568: Failure
[2023-02-08T16:32:03.094Z] Expected equality of these values:
[2023-02-08T16:32:03.094Z]   maxDcpSeqno
[2023-02-08T16:32:03.094Z]     Which is: 0
[2023-02-08T16:32:03.094Z]   handle.getDefaultCollectionMaxLegacyDCPSeqno()
[2023-02-08T16:32:03.094Z]     Which is: 2
[2023-02-08T16:32:03.094Z] [  FAILED  ] CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (28 ms)
CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1388/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1079/ : FAILURE

Compile error at [2023-02-08T16:21:53.605Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1079/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1073/ : FAILURE

Failure of GoogleTest "CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only
[2023-02-08T16:50:52.348Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:4567: Failure
[2023-02-08T16:50:52.348Z] Expected equality of these values:
[2023-02-08T16:50:52.348Z]   mvs
[2023-02-08T16:50:52.348Z]     Which is: 3
[2023-02-08T16:50:52.348Z]   handle.getDefaultCollectionMaxVisibleSeqno()
[2023-02-08T16:50:52.348Z]     Which is: 2
[2023-02-08T16:50:52.348Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:4568: Failure
[2023-02-08T16:50:52.348Z] Expected equality of these values:
[2023-02-08T16:50:52.348Z]   maxDcpSeqno
[2023-02-08T16:50:52.348Z]     Which is: 0
[2023-02-08T16:50:52.348Z]   handle.getDefaultCollectionMaxLegacyDCPSeqno()
[2023-02-08T16:50:52.348Z]     Which is: 2
[2023-02-08T16:50:52.348Z] [  FAILED  ] CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (51 ms)
CollectionsEphemeralOrPersistent/CollectionsParameterizedTest.DefaultCollectionLegacySeqnos/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1073/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1074/ : FAILURE

Compile error at [2023-02-08T16:43:56.252Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1074/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1082/ : FAILURE

Compile error at [2023-02-08T16:38:10.102Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1077:15:
error: invalid use of incomplete type ?class KVStoreIface?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1082/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22580/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-02-10 17:57:26.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
